# kHilltopConnector

./: README.md  build.bat  dependencies.json  hilltop_cache.sqlite  setup.cfg  setup.py
src/kHilltopConnector/: __init__.py  kHilltopConnector.py  openDataLinks.py
src/kHilltopConnector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: hilltop_cache.sqlite  unitTests.ipynb
