[metadata]
name = kHilltopConnector
version = 0.0.1
author = Karunakar
author_email = karunakar.kintada@gmail.com
description = Python package to interact with Hilltop data over internet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hawkes-bay-rc/hydroSOE
project_urls =
    Bug Tracker = https://github.com/hawkes-bay-rc/hydroSOE/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src